--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "dev": "bun --watch src/index.ts",
     "build": "bun build src/index.ts --outdir ./dist",
     "start": "bun dist/index.js",
-    "db:generate": "drizzle-kit generate:sqlite",
+    "db:generate": "bun drizzle-kit generate",
     "db:migrate": "bun src/db/migrate.ts",
     "db:seed": "bun src/db/seed.ts",
     "db:studio": "drizzle-kit studio"
@@ -21,6 +21,6 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "drizzle-kit": "^0.20.4"
+    "drizzle-kit": "^0.31.4"
   }
 }
